--- a/web/dars.html
+++ b/web/dars.html
@@ -83,6 +83,102 @@ body{
 <a href="mavzu8.html" class="lesson-btn">8-Mavzu</a>
 <a href="mavzu9.html" class="lesson-btn">9-Mavzu</a>
 <a href="mavzu10.html" class="lesson-btn">10-Mavzu</a>
+<a href="mavzu11.html" class="lesson-btn">11-Mavzu</a>
+<a href="mavzu12.html" class="lesson-btn">12-Mavzu</a>
+<a href="mavzu13.html" class="lesson-btn">13-Mavzu</a>
+<a href="mavzu14.html" class="lesson-btn">14-Mavzu</a>
+<a href="mavzu15.html" class="lesson-btn">15-Mavzu</a>
+<a href="mavzu16.html" class="lesson-btn">16-Mavzu</a>
+<a href="mavzu17.html" class="lesson-btn">17-Mavzu</a>
+<a href="mavzu18.html" class="lesson-btn">18-Mavzu</a>
+<a href="mavzu19.html" class="lesson-btn">19-Mavzu</a>
+<a href="mavzu20.html" class="lesson-btn">20-Mavzu</a>
+<a href="mavzu21.html" class="lesson-btn">21-Mavzu</a>
+<a href="mavzu22.html" class="lesson-btn">22-Mavzu</a>
+<a href="mavzu23.html" class="lesson-btn">23-Mavzu</a>
+<a href="mavzu24.html" class="lesson-btn">24-Mavzu</a>
+<a href="mavzu25.html" class="lesson-btn">25-Mavzu</a>
+<a href="mavzu26.html" class="lesson-btn">26-Mavzu</a>
+<a href="mavzu27.html" class="lesson-btn">27-Mavzu</a>
+<a href="mavzu28.html" class="lesson-btn">28-Mavzu</a>
+<a href="mavzu29.html" class="lesson-btn">29-Mavzu</a>
+<a href="mavzu30.html" class="lesson-btn">30-Mavzu</a>
+<a href="mavzu31.html" class="lesson-btn">31-Mavzu</a>
+<a href="mavzu32.html" class="lesson-btn">32-Mavzu</a>
+<a href="mavzu33.html" class="lesson-btn">33-Mavzu</a>
+<a href="mavzu34.html" class="lesson-btn">34-Mavzu</a>
+<a href="mavzu35.html" class="lesson-btn">35-Mavzu</a>
+<a href="mavzu36.html" class="lesson-btn">36-Mavzu</a>
+<a href="mavzu37.html" class="lesson-btn">37-Mavzu</a>
+<a href="mavzu38.html" class="lesson-btn">38-Mavzu</a>
+<a href="mavzu39.html" class="lesson-btn">39-Mavzu</a>
+<a href="mavzu40.html" class="lesson-btn">40-Mavzu</a>
+
+<a href="mavzu41.html" class="lesson-btn">41-Mavzu</a>
+<a href="mavzu42.html" class="lesson-btn">42-Mavzu</a>
+<a href="mavzu43.html" class="lesson-btn">43-Mavzu</a>
+<a href="mavzu44.html" class="lesson-btn">44-Mavzu</a>
+<a href="mavzu45.html" class="lesson-btn">45-Mavzu</a>
+<a href="mavzu46.html" class="lesson-btn">46-Mavzu</a>
+<a href="mavzu47.html" class="lesson-btn">47-Mavzu</a>
+<a href="mavzu48.html" class="lesson-btn">48-Mavzu</a>
+<a href="mavzu49.html" class="lesson-btn">49-Mavzu</a>
+<a href="mavzu50.html" class="lesson-btn">50-Mavzu</a>
+
+<a href="mavzu51.html" class="lesson-btn">51-Mavzu</a>
+<a href="mavzu52.html" class="lesson-btn">52-Mavzu</a>
+<a href="mavzu53.html" class="lesson-btn">53-Mavzu</a>
+<a href="mavzu54.html" class="lesson-btn">54-Mavzu</a>
+<a href="mavzu55.html" class="lesson-btn">55-Mavzu</a>
+<a href="mavzu56.html" class="lesson-btn">56-Mavzu</a>
+<a href="mavzu57.html" class="lesson-btn">57-Mavzu</a>
+<a href="mavzu58.html" class="lesson-btn">58-Mavzu</a>
+<a href="mavzu59.html" class="lesson-btn">59-Mavzu</a>
+<a href="mavzu60.html" class="lesson-btn">60-Mavzu</a>
+
+<a href="mavzu61.html" class="lesson-btn">61-Mavzu</a>
+<a href="mavzu62.html" class="lesson-btn">62-Mavzu</a>
+<a href="mavzu63.html" class="lesson-btn">63-Mavzu</a>
+<a href="mavzu64.html" class="lesson-btn">64-Mavzu</a>
+<a href="mavzu65.html" class="lesson-btn">65-Mavzu</a>
+<a href="mavzu66.html" class="lesson-btn">66-Mavzu</a>
+<a href="mavzu67.html" class="lesson-btn">67-Mavzu</a>
+<a href="mavzu68.html" class="lesson-btn">68-Mavzu</a>
+<a href="mavzu69.html" class="lesson-btn">69-Mavzu</a>
+<a href="mavzu70.html" class="lesson-btn">70-Mavzu</a>
+
+<a href="mavzu71.html" class="lesson-btn">71-Mavzu</a>
+<a href="mavzu72.html" class="lesson-btn">72-Mavzu</a>
+<a href="mavzu73.html" class="lesson-btn">73-Mavzu</a>
+<a href="mavzu74.html" class="lesson-btn">74-Mavzu</a>
+<a href="mavzu75.html" class="lesson-btn">75-Mavzu</a>
+<a href="mavzu76.html" class="lesson-btn">76-Mavzu</a>
+<a href="mavzu77.html" class="lesson-btn">77-Mavzu</a>
+<a href="mavzu78.html" class="lesson-btn">78-Mavzu</a>
+<a href="mavzu79.html" class="lesson-btn">79-Mavzu</a>
+<a href="mavzu80.html" class="lesson-btn">80-Mavzu</a>
+
+<a href="mavzu81.html" class="lesson-btn">81-Mavzu</a>
+<a href="mavzu82.html" class="lesson-btn">82-Mavzu</a>
+<a href="mavzu83.html" class="lesson-btn">83-Mavzu</a>
+<a href="mavzu84.html" class="lesson-btn">84-Mavzu</a>
+<a href="mavzu85.html" class="lesson-btn">85-Mavzu</a>
+<a href="mavzu86.html" class="lesson-btn">86-Mavzu</a>
+<a href="mavzu87.html" class="lesson-btn">87-Mavzu</a>
+<a href="mavzu88.html" class="lesson-btn">88-Mavzu</a>
+<a href="mavzu89.html" class="lesson-btn">89-Mavzu</a>
+<a href="mavzu90.html" class="lesson-btn">90-Mavzu</a>
+
+<a href="mavzu91.html" class="lesson-btn">91-Mavzu</a>
+<a href="mavzu92.html" class="lesson-btn">92-Mavzu</a>
+<a href="mavzu93.html" class="lesson-btn">93-Mavzu</a>
+<a href="mavzu94.html" class="lesson-btn">94-Mavzu</a>
+<a href="mavzu95.html" class="lesson-btn">95-Mavzu</a>
+<a href="mavzu96.html" class="lesson-btn">96-Mavzu</a>
+<a href="mavzu97.html" class="lesson-btn">97-Mavzu</a>
+<a href="mavzu98.html" class="lesson-btn">98-Mavzu</a>
+<a href="mavzu99.html" class="lesson-btn">99-Mavzu</a>
+<a href="mavzu100.html" class="lesson-btn">100-Mavzu</a>
 
 <a href="index.html" class="lesson-btn back">⬅ Orqaga</a>
 </div>
