--- a/web/dars.html
+++ b/web/dars.html
@@ -81,8 +81,8 @@ body{
 <a href="mavzu6.html" class="lesson-btn">6-Mavzu</a>
 <a href="mavzu7.html" class="lesson-btn">7-Mavzu</a>
 <a href="mavzu8.html" class="lesson-btn">8-Mavzu</a>
-<a href="mavzu9.html" class="lesson-btn">9-Mavzu</a>
-<a href="mavzu10.html" class="lesson-btn">10-Mavzu</a>
+<a href="mavzu9.htlm" class="lesson-btn">9-Mavzu</a>
+<a href="mavzu10.htlm" class="lesson-btn">10-Mavzu</a>
 <a href="mavzu11.html" class="lesson-btn">11-Mavzu</a>
 <a href="mavzu12.html" class="lesson-btn">12-Mavzu</a>
 <a href="mavzu13.html" class="lesson-btn">13-Mavzu</a>
