--- a/web/index.html
+++ b/web/index.html
@@ -7,6 +7,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Turk Tili Mini App</title>
 
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
+
 <style>
 *{
   box-sizing:border-box;
@@ -15,7 +17,7 @@
 }
 
 body{
-  font-family:Arial, sans-serif;
+  font-family: 'Poppins', Arial, sans-serif;
   background: linear-gradient(180deg,#1e1b4b,#020617);
   color:white;
 }
