--- a/web/index.html
+++ b/web/index.html
@@ -119,13 +119,13 @@ body{
     <h1 class="title">🇹🇷 Turk Tilini O‘rganamiz</h1>
     <div class="subtitle">Mini Darslik & Test Platforma</div>
 
-    <a href="dars.html" class="lesson-btn">📘 Darslar</a>
-    <a href="test.html" class="lesson-btn">🎓 Testlar</a>
+    <a href="dars.html" class="lesson-btn">📚 Darslar</a>
+    <a href="test.html" class="lesson-btn">🧠 Testlar</a>
     <a href="atamalar.html" class="lesson-btn">📖 Atamalar</a>
 
     <!-- TELEGRAM TUGMALAR -->
     <a href="https://t.me/turkchani_organamiz1" class="tg-btn">💬 Konuşma Grubu</a>
-    <a href="https://t.me/turkcha_organamiz2" class="tg-btn">📢 Asosiy Kanal</a>
+    <a href="https://t.me/turkcha_organamiz2" class="tg-btn">🔔 Asosiy Kanal</a>
 
     <div class="about">
       Ushbu mini ilova orqali siz turk tilining asosiy grammatikasi,
