--- a/web/index.html
+++ b/web/index.html
@@ -130,10 +130,9 @@ body{
     <div class="about">
       Ushbu mini ilova orqali siz turk tilining asosiy grammatikasi,
       kundalik so‘zlashuv iboralari va testlar yordamida bilimlaringizni
-      mustahkamlashingiz mumkin.<br><br>
+      mustahkamlashingiz mumkin.Darslarni to‘liq yakunlasangiz, 3 oy ichida turk tilida
+      B2 darajaga chiqishingiz mumkin. <br>
 
-      Darslarni to‘liq yakunlasangiz, 3 oy ichida turk tilida
-      B2 darajaga chiqishingiz mumkin.
     </div>
 
     <div class="footer">Turk tili Bot © 2026</div>
